Fix for https://www.pivotaltracker.com/s/projects/838407/stories/59681396 added underline to active trail and also fixed up spacing between events / publications area and partners banner

--- a/sites/all/themes/wto-stdf/sass/layouts/responsive-sidebars.scss
+++ b/sites/all/themes/wto-stdf/sass/layouts/responsive-sidebars.scss
@@ -121,7 +121,7 @@ $zen-auto-include-item-base: true;
        }
      }
    }
-  
+   ul { margin: 0;}
 }
 
 
